--- a/dev/css/src/_designGrid.scss
+++ b/dev/css/src/_designGrid.scss
@@ -94,6 +94,12 @@ article {
 	}
 }
 
+.grid-container__edit {
+	position: relative;
+	top: -1.5rem;
+	margin-bottom: -.07143rem;
+}
+
 .grid-image {
 	max-width: 100%;
 	height: 100%;
